=======
CHANGES
=======

0.4.3
------
- sql
    - Added "ilike()" operator to column operations.  Compiles
      to ILIKE on postgres, lower(x) LIKE lower(y) on all
      others. [ticket:727]

    - The '.c.' attribute on a selectable now gets an entry
      for every column expression in its columns clause.
      Previously, "unnamed" columns like functions and CASE
      statements weren't getting put there.  Now they will,
      using their full string representation if no 'name' is
      available.

    - a CompositeSelect, i.e. any union(), union_all(),
      intersect(), etc. now asserts that each selectable
      contains the same number of columns.  This conforms to
      the corresponding SQL requirement.

    - The anonymous 'label' generated for otherwise unlabeled
      functions and expressions now propagates outwards at
      compile time for expressions like
      select([select([func.foo()])]).

    - Building on the above ideas, CompositeSelects now build
      up their ".c." collection based on the names present in
      the first selectable only; corresponding_column() now
      works fully for all embedded selectables.
    
    - Oracle and others properly encode SQL used for defaults
      like sequences, etc., even if no unicode idents are used
      since identifier preparer may return a cached unicode
      identifier.
      
- orm
    - Every Session.begin() must now be accompanied by a 
      corresponding commit() or rollback() unless the session
      is closed with Session.close().  This also includes
      the begin() which is implicit to a session created
      with transactional=True.  The biggest change 
      introduced here is that when a Session created with 
      transactional=True raises an exception during flush(), 
      you must call Session.rollback() or Session.close() in 
      order for that Session to continue after an exception.

    - fixed merge() collection-doubling bug when merging 