@@ -9,6 +9,14 @@ CHANGES
       to ILIKE on postgres, lower(x) LIKE lower(y) on all
       others. [ticket:727]
 
+    - the startswith(), endswith(), and contains() operators
+      now concatenate the wildcard operator with the given
+      operand in SQL, i.e. "'%' || <bindparam>" in all cases,
+      accept text('something') operands properly [ticket:962]
+      
+    - cast() accepts text('something') and other non-literal
+      operands properly [ticket:962]
+      
     - The '.c.' attribute on a selectable now gets an entry
       for every column expression in its columns clause.
       Previously, "unnamed" columns like functions and CASE
